objects/Master__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Can_Edit_Today__c</fullName>
        <label>Can_Edit_Today</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FiscalWeek__c</fullName>
        <label>FiscalWeek</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Forecast</label>
        <referenceTo>Forecast__c</referenceTo>
        <relationshipLabel>Masters</relationshipLabel>
        <relationshipName>Masters</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Master</label>
    <nameField>
        <label>Master Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Masters</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>